--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=${DDL_AUTO:create-drop}
-
+spring.jpa.hibernate.ddl-auto=${env.DDL_AUTO:create-drop}
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
-
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
-
-spring.datasource.password=password s
-spring.datasource.username=postgres
+# The Port
 server.port=8081
+# Database Connection
+# Environment variables (for development) are taken from a .env file (if specified)
+spring.datasource.url=${env.DATABASE_URL:jdbc:postgresql://localhost:4500/postgres?password=password}
+spring.datasource.username=${env.POSTGRES_USER:postgres}
+spring.datasource.password=${env.POSTGRES_PASSWORD:password}
