Feat: Application port can now be configured via an environment variable
This is to enable hosting services (such as Heroku) to
specify a port.

Signed-off-by: Thomas 'Noit' A <tba@live.dk>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=${env.DDL_AUTO:create-drop}
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
-# The Port
-server.port=8081
+# The Port the API runs on
+server.port=${PORT:8081}
 # Database Connection
 # Environment variables (for development) are taken from a .env file (if specified)
 spring.datasource.url=${env.DATABASE_URL:jdbc:postgresql://localhost:4500/postgres?password=password}
