Refactor: Add comments to application.properties
Signed-off-by: Thomas 'Noit' A <tba@live.dk>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+# Specifies the driver to use for the dataSource (database)
 spring.datasource.driverClassName=org.postgresql.Driver
+# Tells hibernate which SQL dialect to use (in this case, PostgresSQL)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Controls Hibernates database generation
 spring.jpa.hibernate.ddl-auto=${env.DDL_AUTO:create-drop}
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+
+# Init mode determines how often initialization happens
+spring.sql.init.mode=ALWAYS
 # The Port the API runs on
 server.port=${PORT:8081}
 # Database Connection
