--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ server.port=${PORT:8081}
 spring.datasource.url=${env.DATABASE_URL:jdbc:postgresql://localhost:4500/postgres?password=password}
 spring.datasource.username=${env.POSTGRES_USER:postgres}
 spring.datasource.password=${env.POSTGRES_PASSWORD:password}
+
+
+#Turn Statistics on (usually turned off for production)
+logging.level.org.hibernate.stat=${LOGGING_LEVEL:debug}
+# Enable logging (usually turned off for production)
+spring.jpa.show-sql=${ENABLE_LOGGING:true}
