Fix(config): Disable exception on serializing empty beans
Before this fix a serialization exception would be thrown
when trying to findById. It might also be fixable by
using two models: one for JSON, one for JPA interactions.

Signed-off-by: Thomas 'Noit' A <tba@live.dk>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.datasource.password=${env.POSTGRES_PASSWORD:password}
 logging.level.org.hibernate.stat=${LOGGING_LEVEL:debug}
 # Enable logging (usually turned off for production)
 spring.jpa.show-sql=${ENABLE_LOGGING:true}
+
+# Disables an exception on GetById operation
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
