--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=supersecretpassword
+POSTGRES_USER=databaseUser
+POSTGRES_PASSWORD=databasePassword
+POSTGRES_DB=nameOfDatabase
+# Connection String format:
+# jdbc:postgresql://host_name/database_name
+DATABASE_URL=jdbc:postgresql://localhost:4500/nameOfDatabase
+
+# Specifices which (if any) automatic Data Definition Language actions Hibernate will take (db generation)
+# Options: create, create-drop, update, validate, none
+DDL_AUTO=create-drop
