Feat: Add Swagger
Signed-off-by: Thomas 'Noit' A <tba@live.dk>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.jpa.show-sql=${ENABLE_LOGGING:true}
 
 # Disables an exception on GetById operation
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+# Changes the default swagger path from '/swagger-ui.html' to the one specified in the setting below
+# (it can also be accessed at /swagger-ui/index.html)
+springdoc.swagger-ui.path=/swagger
