Chore: Enable use of .env file to configure logging and port in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=${env.DDL_AUTO:create-drop}
 # Init mode determines how often initialization happens
 spring.sql.init.mode=ALWAYS
 # The Port the API runs on
-server.port=${PORT:8081}
+server.port=${env.PORT:8081}
 # Database Connection
 # Environment variables (for development) are taken from a .env file (if specified)
 spring.datasource.url=${env.DATABASE_URL:jdbc:postgresql://localhost:4500/postgres?password=password}
@@ -19,7 +19,7 @@ spring.datasource.password=${env.POSTGRES_PASSWORD:password}
 #Turn Statistics on (usually turned off for production)
 logging.level.org.hibernate.stat=${LOGGING_LEVEL:debug}
 # Enable logging (usually turned off for production)
-spring.jpa.show-sql=${ENABLE_LOGGING:true}
+spring.jpa.show-sql=${env.ENABLE_LOGGING:true}
 
 # Disables an exception on GetById operation
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
