--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
-version: '3'
+version: '3.0'
 services:
+  web:
+    container_name: renewing-java-api-knowledge
+    build: .
+    environment:
+      DDL_AUTO: ${DDL_AUTO}
+      DATABASE_URL: jdbc:postgresql://postgresDB:5432/${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "8081:8081"
   postgresDB:
     container_name: practice_postgres_db
     # Image source: https://hub.docker.com/_/postgres/
