--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.8</version>
 		</dependency>
+		<!-- This dependency is used to get BasicDataSource class used in the DatabaseConfig class -->
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 
 	</dependencies>
 
