Config: Add variable SPRING_PROFILE to config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.datasource.url=${env.DATABASE_URL:jdbc:postgresql://localhost:4500/postgr
 spring.datasource.username=${env.POSTGRES_USER:postgres}
 spring.datasource.password=${env.POSTGRES_PASSWORD:password}
 
+spring.profiles.active=${env.SPRING_PROFILE}
 
 #Turn Statistics on (usually turned off for production)
 logging.level.org.hibernate.stat=${LOGGING_LEVEL:debug}
