--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DATABASE_URL=jdbc:postgresql://localhost:4500/nameOfDatabase
 # Specifices which (if any) automatic Data Definition Language actions Hibernate will take (db generation)
 # Options: create, create-drop, update, validate, none
 DDL_AUTO=create-drop
+
+# The default is "development". Should be "production" in production.
+SPRING_PROFILE=development
