Chore: Add .env to LOGGING_LEVEL in application.properties
This enables the use of .env file to set the property.

Signed-off-by: Thomas 'Noit' A <tba@live.dk>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.password=${env.POSTGRES_PASSWORD:password}
 spring.profiles.active=${env.SPRING_PROFILE}
 
 #Turn Statistics on (usually turned off for production)
-logging.level.org.hibernate.stat=${LOGGING_LEVEL:debug}
+logging.level.org.hibernate.stat=${env.LOGGING_LEVEL:debug}
 # Enable logging (usually turned off for production)
 spring.jpa.show-sql=${env.ENABLE_LOGGING:true}
 
