Chore(config): Enable prettified SQL logging
This makes the SQL queries hibernate makes easier
to read (albeit taking up much more space)

Signed-off-by: Thomas 'Noit' A <tba@live.dk>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.profiles.active=${env.SPRING_PROFILE}
 logging.level.org.hibernate.stat=${env.LOGGING_LEVEL:debug}
 # Enable logging (usually turned off for production)
 spring.jpa.show-sql=${env.ENABLE_LOGGING:true}
+# When SQL is logged via hibernate it is prettified (takes up more space, but it's more readable)
+spring.jpa.properties.hibernate.format_sql=true
 
 # Disables an exception on GetById operation
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
