Config(app.props): add logging config for noitcereon.mydemoapi

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ DDL_AUTO=create-drop
 
 # The default is "development". Should be "production" in production.
 SPRING_PROFILE=development
+
+# Options: TRACE, DEBUG, INFO, WARN, ERROR, ALL or OFF (case insensitive)
+LOGGING_LEVEL=DEBUG
