--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.password=${env.POSTGRES_PASSWORD:password}
 spring.profiles.active=${env.SPRING_PROFILE}
 
 #Turn Statistics on (usually turned off for production)
-logging.level.org.hibernate.stat=${env.LOGGING_LEVEL:debug}
+logging.level.org.hibernate.stat=${env.LOGGING_LEVEL:DEBUG}
 # Enable logging (usually turned off for production)
 spring.jpa.show-sql=${env.ENABLE_LOGGING:true}
 # When SQL is logged via hibernate it is prettified (takes up more space, but it's more readable)
@@ -30,3 +30,6 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 # Changes the default swagger path from '/swagger-ui.html' to the one specified in the setting below
 # (it can also be accessed at /swagger-ui/index.html)
 springdoc.swagger-ui.path=/swagger
+
+# Configures logging everything under the noitcereon.mydemojavapi package
+logging.level.noitcereon.mydemojavaapi=${env.LOGGING_LEVEL:INFO}
