--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,9 @@ SPRING_PROFILE=development
 
 # Options: TRACE, DEBUG, INFO, WARN, ERROR, ALL or OFF (case insensitive)
 LOGGING_LEVEL=DEBUG
+
+# Security
+# OAuth Client
+CLIENT_ID=your-client-id
+CLIENT_SECRET=your-client-secret
+ISSUER_URL=IdPUrl # Identity Provider's URL
