--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,10 @@ springdoc.swagger-ui.path=/swagger
 
 # Configures logging everything under the noitcereon.mydemojavapi package
 logging.level.noitcereon.mydemojavaapi=${env.LOGGING_LEVEL:INFO}
+
+
+# Security
+springdoc.swagger-ui.oauth.client-id=${CLIENT_ID:client-id}
+springdoc.swagger-ui.oauth.client-secret=${CLIENT_SECRET:client-secret}
+springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${ISSUER_URL:http://localhost:8083/auth/realms/myrealm}
