Config(app.props): Change default log level & resource_server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,11 +32,11 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 springdoc.swagger-ui.path=/swagger
 
 # Configures logging everything under the noitcereon.mydemojavapi package
-logging.level.noitcereon.mydemojavaapi=${env.LOGGING_LEVEL:INFO}
+logging.level.noitcereon.mydemojavaapi=${env.LOGGING_LEVEL:DEBUG}
 
 
 # Security
-springdoc.swagger-ui.oauth.client-id=${CLIENT_ID:client-id}
-springdoc.swagger-ui.oauth.client-secret=${CLIENT_SECRET:client-secret}
+springdoc.swagger-ui.oauth.client-id=${env.CLIENT_ID:client-id}
+springdoc.swagger-ui.oauth.client-secret=${env.CLIENT_SECRET:client-secret}
 springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${ISSUER_URL:http://localhost:8083/auth/realms/myrealm}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${env.ISSUER_URL:http://localhost:8083/auth/realms/renewing-java-api-knowledge}
