Chore: Add comments to .env-example

--- a/.env.example
+++ b/.env.example
@@ -19,4 +19,6 @@ LOGGING_LEVEL=DEBUG
 # OAuth Client
 CLIENT_ID=your-client-id
 CLIENT_SECRET=your-client-secret
-ISSUER_URL=IdPUrl # Identity Provider's URL
+ # Identity Provider's URL (see Keycloaks OpenID Endpoint Configuration)
+ # Location: {host}/realms/{realm-name}/.well-known/openid-configuration
+ISSUER_URL=http://localhost:8083/realms/renewing-java-api-knowledge
