Chore: Add additional comment

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ LOGGING_LEVEL=DEBUG
 # Security
 # OAuth Client
 CLIENT_ID=your-client-id
+# Client Secret is only needed if the Keycloak client (KC's representation of this API) is of confidential type.
 CLIENT_SECRET=your-client-secret
 # Identity Provider's URL (see Keycloaks OpenID Endpoint Configuration)
 # Location: {host}/realms/{realm-name}/.well-known/openid-configuration
