--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>com.noitcereon</groupId>
     <artifactId>automatic-timetable-generation</artifactId>
     <version>0.0.1</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
