--- a/chest-sorting-algorithm-proof-of-concept/pom.xml
+++ b/chest-sorting-algorithm-proof-of-concept/pom.xml
@@ -7,6 +7,14 @@
     <groupId>com.noitcereon</groupId>
     <artifactId>chest-sorting-algorithm-proof-of-concept</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
