--- a/astro-try-out/package.json
+++ b/astro-try-out/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@astrojs/tailwind": "^1.0.0",
-    "astro": "^1.0.6"
+    "@astrojs/vue": "^1.0.0",
+    "astro": "^1.0.6",
+    "vue": "^3.2.30"
   }
 }
