--- a/astro-try-out/tsconfig.json
+++ b/astro-try-out/tsconfig.json
@@ -14,6 +14,8 @@
     // Enable strict type checking.
     "strict": true,
     // Error when a value import is only used as a type.
-    "importsNotUsedAsValues": "error"
+    "importsNotUsedAsValues": "error",
+    // Enables TypeScript intellisense in <template> sections (VUe related)
+    "jsx": "preserve"
   }
 }
