movie-spring: Setup mysql db with Docker

--- a/movie-api-spring-boot/src/main/resources/application.properties
+++ b/movie-api-spring-boot/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
-spring.datasource.url=
+spring.datasource.url=${env.DB_CONNECTION_STRING}
 # spring.datasource.driver-class-name=
-spring.datasource.username={MYSQL_USERNAME}
-spring.datasource.password={MYSQL_PASSWORD}
+spring.datasource.username=${env.DB_USERNAME}
+spring.datasource.password=${env.DB_PASSWORD}
+server.port=${env.APP_PORT}
