movie-spring: Add OpenAPI aka. Swagger

--- a/movie-api-spring-boot/src/main/resources/application.properties
+++ b/movie-api-spring-boot/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=${env.DB_CONNECTION_STRING}
 spring.datasource.username=${env.DB_USERNAME}
 spring.datasource.password=${env.DB_PASSWORD}
 server.port=${env.APP_PORT}
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger
