--- a/movie-api-spring-boot/pom.xml
+++ b/movie-api-spring-boot/pom.xml
@@ -51,11 +51,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>me.paulschwarz</groupId>
             <artifactId>spring-dotenv</artifactId>
             <version>2.5.4</version>
+        </dependency>
+        <!--  https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui  -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.9</version>
         </dependency>
     </dependencies>
 
