movie-spring: Add rest api to docker-compose & make it work

--- a/movie-api-spring-boot/docker-compose.yml
+++ b/movie-api-spring-boot/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3.1"
 
 services:
+  web:
+    image: yeehaw:latest
+    build: .
+    environment:
+      # The Connection String is slightly different depending on whether its on the host or in the container.
+      # Note the host name. On host machine it is localhost. In the container it is db (which is the name of the database container in the Docker network)
+      DB_CONNECTION_STRING: jdbc:mysql://db:3306/MovieSpringDB
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      APP_PORT: ${APP_PORT}
+    ports:
+      - 8084:${APP_PORT}
   db:
     image: mysql # https://hub.docker.com/_/mysql/
     # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
@@ -13,7 +25,7 @@ services:
       MYSQL_USER: ${DB_USERNAME}
       MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "8081:3306"
+      - "3306:3306"
     volumes:
       - mysql:/var/lib/mysql
   adminer:
