movie-spring: Update app props and add testSeeding script

--- a/movie-api-spring-boot/src/main/resources/application.properties
+++ b/movie-api-spring-boot/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-
+# Database configuration
 spring.datasource.url=${env.DB_CONNECTION_STRING}
-# spring.datasource.driver-class-name=
 spring.datasource.username=${env.DB_USERNAME}
 spring.datasource.password=${env.DB_PASSWORD}
+
+# TomCat port
 server.port=${env.APP_PORT}
 
 # swagger-ui custom path
