--- a/movie-api-spring-boot/src/main/resources/application.properties
+++ b/movie-api-spring-boot/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=${env.DB_USERNAME}
 spring.datasource.password=${env.DB_PASSWORD}
 
 # TomCat port
-server.port=${env.APP_PORT}
+server.port=${env.PORT}
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger
