--- a/soap-learning/pom.xml
+++ b/soap-learning/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.noitcereon</groupId>
     <artifactId>soap-learning</artifactId>
-    <version>0.0.1+2023</version>
+    <version>0.0.1-alpha-1_2023</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
