--- a/jaxb-introduction/schemas/pom.xml
+++ b/jaxb-introduction/schemas/pom.xml
@@ -16,5 +16,35 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jvnet.jaxb2.maven2</groupId>
+                <artifactId>maven-jaxb2-plugin</artifactId>
+                <version>0.13.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
 
+                <configuration>
+                    <schemaDirectory>src/main/resources/schemas</schemaDirectory>
+                    <!-- The below args and plugins section was used by OSM, but I don't know what it does. -->
+                    <!--                    <args>-->
+                    <!--                        <arg>-Xsetters</arg>-->
+                    <!--                    </args>-->
+                    <!--                    <plugins>-->
+                    <!--                        <plugin>-->
+                    <!--                            <groupId>org.jvnet.jaxb2_commons</groupId>-->
+                    <!--                            <artifactId>jaxb2-basics</artifactId>-->
+                    <!--                            <version>1.11.1</version>-->
+                    <!--                        </plugin>-->
+                    <!--                    </plugins>-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
