--- a/jaxb-introduction/schemas/pom.xml
+++ b/jaxb-introduction/schemas/pom.xml
@@ -32,17 +32,18 @@
 
                 <configuration>
                     <schemaDirectory>src/main/resources/schemas</schemaDirectory>
-                    <!-- The below args and plugins section was used by OSM, but I don't know what it does. -->
-                    <!--                    <args>-->
-                    <!--                        <arg>-Xsetters</arg>-->
-                    <!--                    </args>-->
-                    <!--                    <plugins>-->
-                    <!--                        <plugin>-->
-                    <!--                            <groupId>org.jvnet.jaxb2_commons</groupId>-->
-                    <!--                            <artifactId>jaxb2-basics</artifactId>-->
-                    <!--                            <version>1.11.1</version>-->
-                    <!--                        </plugin>-->
-                    <!--                    </plugins>-->
+                    <!-- The below args and plugins section was used by OSM, they seem to add setters to the generated code.
+                     Example: MSCountryCodeType does not have setDestinationCountries() without this.-->
+                    <args>
+                        <arg>-Xsetters</arg>
+                    </args>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.jvnet.jaxb2_commons</groupId>
+                            <artifactId>jaxb2-basics</artifactId>
+                            <version>1.11.1</version>
+                        </plugin>
+                    </plugins>
                 </configuration>
             </plugin>
         </plugins>
