--- a/soap-learning-with-spring/pom.xml
+++ b/soap-learning-with-spring/pom.xml
@@ -17,11 +17,13 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
-
+        <!--  https://mvnrepository.com/artifact/wsdl4j/wsdl4j/1.6.3 -->
+        <!-- "The Web Services Description Language for Java Toolkit (WSDL4J) allows the creation, representation, and manipulation of WSDL documents. Is the reference implementation for JSR110 'JWSDL' (jcp.org)." -->
         <dependency>
             <groupId>wsdl4j</groupId>
             <artifactId>wsdl4j</artifactId>
         </dependency>
+
         <!-- Spring Boot dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -45,7 +47,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <!-- This plugin automatically generates wsdl files, during build phase, based on xsd files in resources folder. -->
+                <!-- This plugin automatically generates java classes (during build phase) based on xsd files in resources folder. -->
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
                 <version>3.1.0</version>
