--- a/soap-learning-with-spring/pom.xml
+++ b/soap-learning-with-spring/pom.xml
@@ -84,7 +84,7 @@
                 </executions>
                 <configuration>
                     <sources>
-                        <source>${project.basedir}/src/main/resources/schemas/countries.xsd</source>
+                        <source>${project.basedir}/src/main/resources/schemas/</source>
                     </sources>
                 </configuration>
             </plugin>
