movie-spring: Add .env.example example values

--- a/movie-api-spring-boot/.env.example
+++ b/movie-api-spring-boot/.env.example
@@ -1,4 +1,4 @@
-
-DB_CONNECTION_STRING=
-DB_USERNAME=
-DB_PASSWORD=
+# The below values are example values. They should be replaced for production.
+DB_CONNECTION_STRING=jdbc:mysql://localhost:3306/MovieSpringDB
+DB_USERNAME=Noit
+DB_PASSWORD=temporaryDevPassword
